# nirman

./: .env  .gitignore  README.md  docker-compose.yaml  index.html  main.py  pyproject.toml  run-docker.sh  run-native.sh  trim_video.py
backend/: Dockerfile  app.py  generate_sample_onnx.py  generate_sample_video.py  requirements-native.txt  requirements.txt  state.json
images/: pothole_deaths_india.csv
notebooks/: notebook29410ecd0b.ipynb
