[project]
name = "pothole-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.111.0",
    "httptools>=0.6.0",
    "httpx>=0.28.1",
    "numpy>=1.26.0",
    "onnxruntime>=1.17.3",
    "opencv-python>=4.9.0",
    "opencv-python-headless>=4.9.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.29.0",
    "uvloop>=0.19.0",
    "websockets>=12.0",
]
